Asg3/k8s/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-db
  labels:
    app: app-db
spec:
  selector:
    matchLabels:
      app: app-db
  replicas: 1
  template:
    metadata:
      labels:
        app: app-db
    spec:
      containers:
        - name: app-db
          image: postgres
          imagePullPolicy: Always
          ports:
            - containerPort: 5432
#      volumeMounts:
#        - name: db-data
#          mountPath: /var/lib/postgresql/data
#    volumes:
#        - name: db-data
#          persistentVolumeClaim:
#            claimName: db-pvc
