Asg3/k8s/shortener-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-shortener
  labels:
    app: app-shortener
spec:
  selector:
    matchLabels:
      app: app-shortener
  replicas: 3
  template:
    metadata:
      labels:
        app: app-shortener
    spec:
      containers:
        - name: app-shortener
          image: roylife/web-service-shortener:v1
          imagePullPolicy: Always
          ports:
          - containerPort: 3001
