Asg3/k8s/auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-auth
  labels:
    run: app-auth
spec:
  ports:
    - port: 3000
      protocol: TCP
  selector:
      run: app-auth
