Asg3/k8s/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-db
  labels:
    run: app-db
spec:
  ports:
    - port: 5432
      protocol: TCP
  selector:
      run: app-db
