Asg3/k8s/shortener-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-shortener
  labels:
    run: app-shortener
spec:
  ports:
    - port: 3001
      protocol: TCP
  selector:
      run: app-shortener
