Asg3/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /users
            pathType: Prefix
            backend:
              service:
                name: app-auth
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-shortener
                port:
                  number: 3001
